# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet_service"
description = "Layered service integration for the cachet caching library."
version = "0.1.1"
readme = "README.md"
keywords = ["oxidizer", "caching", "concurrency"]
categories = ["caching", "concurrency"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cachet_service"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "cachet_tier::entry::CacheEntry",
    "cachet_tier::error::Error",
    "cachet_tier::tier::CacheTier",
    "layered::service::Service",
]

[dependencies]
cachet_tier = { workspace = true }
layered = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
