# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cachet_tier"
description = "Core cache tier trait and abstractions for building cache backends."
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "caching", "concurrency"]
categories = ["caching", "concurrency"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cachet_tier"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "ohno::enrichable::Enrichable",
    "ohno::error_ext::ErrorExt",
    "recoverable::Recovery",
    "recoverable::RecoveryInfo",
]

[features]
test-util = ["dep:parking_lot"]

[dependencies]
dynosaur = { workspace = true }
ohno = { workspace = true }
parking_lot = { workspace = true, optional = true }
recoverable = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
tick = { workspace = true, features = ["test-util"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
] }

[lints]
workspace = true
