[package]
name = "cargo-ensure-no-cyclic-deps"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
description = "A cargo subcommand to detect cyclic dependencies in workspace crates"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["cargo", "subcommand", "dependencies", "cycles"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = { workspace = true }
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context"] }
petgraph = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true, features = ["diff"] }
tempfile = { workspace = true }

[[bin]]
name = "cargo-ensure-no-cyclic-deps"
path = "src/main.rs"

[lints]
workspace = true
