# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "ci_aids"
description = "Shared code for writing Rust scripts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
