# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy"
description = "Data annotation and redaction system providing a robust way to manipulate sensitive information."
version = "0.7.0"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "serde::*",
    "serde_core::de::*",
    "serde_core::ser::*",
    "data_privacy_macros::*",
]

[features]
default = ["serde"]
serde = ["dep:serde"]
xxh3 = ["dep:xxhash-rust"]

[dependencies]
data_privacy_macros.workspace = true
serde = { workspace = true, optional = true, default-features = false, features = ["derive", "std"] }
xxhash-rust = { workspace = true, optional = true, features = ["xxh3"] }

[dev-dependencies]
derive_more = { workspace = true, features = ["constructor", "from"] }
mutants.workspace = true
once_cell = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[example]]
name = "employees"
path = "examples/employees/main.rs"
