# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy"
description = "Data annotation and redaction system providing a robust way to manipulate sensitive information."
version = "0.12.4"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/data_privacy"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "serde_core::de::*",
    "serde_core::ser::*",
    "data_privacy_core::*",
    "data_privacy_macros::*",
    "rapidhash::v3::seed::RapidSecrets",
]

[features]
default = ["serde"]
rapidhash = ["dep:rapidhash"]
serde = ["data_privacy_core/serde"]
xxh3 = ["dep:xxhash-rust"]

[dependencies]
data_privacy_core.workspace = true
data_privacy_macros.workspace = true
rapidhash = { workspace = true, optional = true }
rustc-hash = { workspace = true, features = ["std"] }
xxhash-rust = { workspace = true, optional = true, features = ["xxh3"] }

[dev-dependencies]
derive_more = { workspace = true, features = ["constructor", "from"] }
insta.workspace = true
mutants.workspace = true
once_cell = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }

[[example]]
name = "employees"
path = "examples/employees/main.rs"

# >>> anvil-managed: anvil-lints
[lints]
workspace = true
# <<< anvil-managed: anvil-lints
