# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy_macros"
description = "Procedural macros for data privacy."
version = "0.3.0"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["derive", "full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
mutants.workspace = true
insta = { workspace = true, features = ["yaml"] }
prettyplease.workspace = true

[lints]
workspace = true
