# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy_macros"
description = "Macros for the data_privacy crate."
version = "0.9.0"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/data_privacy_macros"

[package.metadata.cargo_check_external_types]
allowed_external_types = ["data_privacy_macros::*"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
data_privacy_macros_impl.workspace = true

[dev-dependencies]
mutants.workspace = true

[lints]
workspace = true
