# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy_macros_impl"
description = "Macros for the data_privacy crate."
version = "0.7.0"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "proc_macro2::TokenStream",
    "syn::error::Error",
    "syn::error::Result",
]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["derive", "full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
mutants.workspace = true
prettyplease.workspace = true

[lints]
workspace = true
