# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "data_privacy_macros_impl"
description = "Macros for the data_privacy crate."
version = "0.10.3"
readme = "README.md"
keywords = ["oxidizer", "compliance", "privacy", "redaction", "scrubbing"]
categories = ["data-structures"]

edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/data_privacy_macros_impl"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "proc_macro2::TokenStream",
    "syn::error::Error",
    "syn::error::Result",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
    "derive",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
prettyplease = { workspace = true }

# >>> anvil-managed: anvil-lints
[lints]
workspace = true
# <<< anvil-managed: anvil-lints
