# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "error_label"
description = "Low-cardinality label for errors."
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "error", "label", "telemetry"]
categories = ["data-structures"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/error_label"

[package.metadata.docs.rs]
all-features = true

[dependencies]

[dev-dependencies]
insta.workspace = true
testing_aids.workspace = true

[lints]
workspace = true
